--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,7 @@
 <div class="about">
     <h1>My Aboutpage </h1>
     <p>this is a test website again</p>
+    <p>This was added later</p>
 </div>
 {%endblock%}
 
